Fixed typo in help text

--- a/huawei-router/huawei-wlanhosts.html
+++ b/huawei-router/huawei-wlanhosts.html
@@ -31,7 +31,7 @@
     </div>
 </script>
 
-<script type="text/html" data-help-name="huawei-router">
+<script type="text/html" data-help-name="huawei-wlanhosts">
     <p>Returns array of connected devices.</p>
     <p>Accepts any input to make it run.</p>
     <h3>Output</h3>
