chore: minor changes

--- a/huawei-router/huawei-lanhosts.html
+++ b/huawei-router/huawei-lanhosts.html
@@ -11,7 +11,7 @@
         outputs: 1,
         icon: "bridge.svg",
         label: function () {
-            return this.name || "huawei known hosts"
+            return this.name || "huawei lanhosts"
         }
     })
 </script>
