--- a/huawei-router/huawei-signal.html
+++ b/huawei-router/huawei-signal.html
@@ -32,7 +32,7 @@
 </script>
 
 <script type="text/html" data-help-name="huawei-signal">
-    <p>Returns signal strength of data LTE/4G connection.</p>
+    <p>Returns signal strength of data/LTE connection.</p>
     <p>Accepts any input to make it run.</p>
     <h3>Output</h3>
     <dl class="message-properties">
