--- a/huawei-router/huawei-wlanhosts.html
+++ b/huawei-router/huawei-wlanhosts.html
@@ -11,7 +11,7 @@
         outputs: 1,
         icon: "bridge.svg",
         label: function () {
-            return this.name || "huawei active hosts"
+            return this.name || "huawei wlanhosts"
         }
     })
 </script>
