--- a/huawei-router/huawei-mobiledata.html
+++ b/huawei-router/huawei-mobiledata.html
@@ -3,9 +3,7 @@
         category: 'homesmart',
         color: '#E5766A',
         defaults: {
-            user: { value: "admin", required: true },
-            pass: { value: "", required: true },
-            url: { value: "192.168.1.1", required: true },
+            server: {value:"", type:"huawei-config"},
             mode: { value: "off-on"}
         },
         inputs: 1,
@@ -19,6 +17,10 @@
 
 <script type="text/html" data-template-name="huawei-mobiledata">
     <div class="form-row">
+        <label for="node-input-server"><i class="fa fa-globe"></i> Server</label>
+        <input type="text" id="node-input-server">
+    </div>
+    <!-- <div class="form-row">
         <label for="node-input-user"><i class="fa fa-user"></i> Username</label>
         <input type="text" id="node-input-user" placeholder="Eg. admin">
     </div>
@@ -29,7 +31,7 @@
     <div class="form-row">
         <label for="node-input-url"><i class="fa fa-globe"></i> URL of router</label>
         <input type="text" id="node-input-url" placeholder="Eg. 192.168.0.45">
-    </div>
+    </div> -->
     <div class="form-row">
         <label for="node-input-mode"><i class="fa fa-pencil-square-o"></i> Mode</label>
         <select value="" id="node-input-mode">
