--- a/huawei-router/huawei-wlanhosts.html
+++ b/huawei-router/huawei-wlanhosts.html
@@ -3,9 +3,7 @@
         category: 'homesmart',
         color: '#E5766A',
         defaults: {
-            user: { value: "admin", required: true },
-            pass: { value: "", required: true },
-            url: { value: "192.168.1.1", required: true }
+            server: {value:"", type:"huawei-config"}
         },
         inputs: 1,
         outputs: 1,
@@ -18,16 +16,8 @@
 
 <script type="text/html" data-template-name="huawei-wlanhosts">
     <div class="form-row">
-        <label for="node-input-user"><i class="fa fa-user"></i> Username</label>
-        <input type="text" id="node-input-user" placeholder="Eg. admin">
-    </div>
-    <div class="form-row">
-        <label for="node-input-pass"><i class="fa fa-key"></i> Password</label>
-        <input type="password" id="node-input-pass" placeholder="" autocomplete="off">
-    </div>
-    <div class="form-row">
-        <label for="node-input-url"><i class="fa fa-globe"></i> URL of router</label>
-        <input type="text" id="node-input-url" placeholder="Eg. 192.168.0.45">
+        <label for="node-input-server"><i class="fa fa-globe"></i> Server</label>
+        <input type="text" id="node-input-server">
     </div>
 </script>
 
