--- a/huawei-router/huawei-router.html
+++ b/huawei-router/huawei-router.html
@@ -32,6 +32,7 @@
         category: 'homesmart',
         color: '#E5766A',
         defaults: {
+            name: {value:""},
             server: {value:"", type:"huawei-config"}
         },
         inputs: 1,
@@ -44,6 +45,10 @@
 </script>
 
 <script type="text/html" data-template-name="huawei-lanhosts">
+    <div class="form-row">
+        <label for="node-input-name"><i class="fa fa-tag"></i> Name</label>
+        <input type="text" id="node-input-name" placeholder="Name">
+    </div>
     <div class="form-row">
         <label for="node-input-server"><i class="fa fa-globe"></i> Server</label>
         <input type="text" id="node-input-server">
@@ -70,6 +75,7 @@
         category: 'homesmart',
         color: '#E5766A',
         defaults: {
+            name: {value:""},
             server: {value:"", type:"huawei-config"},
             mode: { value: "off-on"}
         },
@@ -84,21 +90,13 @@
 
 <script type="text/html" data-template-name="huawei-mobiledata">
     <div class="form-row">
+        <label for="node-input-name"><i class="fa fa-tag"></i> Name</label>
+        <input type="text" id="node-input-name" placeholder="Name">
+    </div>
+    <div class="form-row">
         <label for="node-input-server"><i class="fa fa-globe"></i> Server</label>
         <input type="text" id="node-input-server">
     </div>
-    <!-- <div class="form-row">
-        <label for="node-input-user"><i class="fa fa-user"></i> Username</label>
-        <input type="text" id="node-input-user" placeholder="Eg. admin">
-    </div>
-    <div class="form-row">
-        <label for="node-input-pass"><i class="fa fa-key"></i> Password</label>
-        <input type="password" id="node-input-pass" placeholder="" autocomplete="off">
-    </div>
-    <div class="form-row">
-        <label for="node-input-url"><i class="fa fa-globe"></i> URL of router</label>
-        <input type="text" id="node-input-url" placeholder="Eg. 192.168.0.45">
-    </div> -->
     <div class="form-row">
         <label for="node-input-mode"><i class="fa fa-pencil-square-o"></i> Mode</label>
         <select value="" id="node-input-mode">
@@ -146,18 +144,23 @@
         category: 'homesmart',
         color: '#E5766A',
         defaults: {
+            name: {value:""},
             server: {value:"", type:"huawei-config"}
         },
         inputs: 1,
         outputs: 1,
         icon: "bridge.svg",
         label: function () {
-            return this.name || "huawei signal strength"
+            return this.name || "huawei signal"
         }
     })
 </script>
 
 <script type="text/html" data-template-name="huawei-signal">
+    <div class="form-row">
+        <label for="node-input-name"><i class="fa fa-tag"></i> Name</label>
+        <input type="text" id="node-input-name" placeholder="Name">
+    </div>
     <div class="form-row">
         <label for="node-input-server"><i class="fa fa-globe"></i> Server</label>
         <input type="text" id="node-input-server">
@@ -183,6 +186,7 @@
         category: 'homesmart',
         color: '#E5766A',
         defaults: {
+            name: {value:""},
             server: {value:"", type:"huawei-config"}
         },
         inputs: 1,
@@ -195,6 +199,10 @@
 </script>
 
 <script type="text/html" data-template-name="huawei-wlanhosts">
+    <div class="form-row">
+        <label for="node-input-name"><i class="fa fa-tag"></i> Name</label>
+        <input type="text" id="node-input-name" placeholder="Name">
+    </div>
     <div class="form-row">
         <label for="node-input-server"><i class="fa fa-globe"></i> Server</label>
         <input type="text" id="node-input-server">
@@ -220,6 +228,7 @@
         category: 'homesmart',
         color: '#E5766A',
         defaults: {
+            name: {value:""},
             server: {value:"", type:"huawei-config"}
         },
         inputs: 1,
@@ -232,6 +241,10 @@
 </script>
 
 <script type="text/html" data-template-name="huawei-reboot">
+    <div class="form-row">
+        <label for="node-input-name"><i class="fa fa-tag"></i> Name</label>
+        <input type="text" id="node-input-name" placeholder="Name">
+    </div>
     <div class="form-row">
         <label for="node-input-server"><i class="fa fa-globe"></i> Server</label>
         <input type="text" id="node-input-server">
