Fix handling of true/false as input

--- a/huawei-router/huawei-router.html
+++ b/huawei-router/huawei-router.html
@@ -103,7 +103,7 @@
             <option value="off-on">turn data off then on again</option>
             <option value="on">turn data on</option>
             <option value="off">turn data off</option>
-            <option value="toggle">toggle data between on and off</option>
+            <option value="toggle">toggle data on/off</option>
         </select>
     </div>
 </script>
