--- a/huawei-router/huawei-router.html
+++ b/huawei-router/huawei-router.html
@@ -33,7 +33,7 @@
         color: '#E5766A',
         defaults: {
             name: {value:""},
-            server: {value:"", type:"huawei-config"}
+            server: {type:"huawei-config", required:true}
         },
         inputs: 1,
         outputs: 1,
@@ -76,7 +76,7 @@
         color: '#E5766A',
         defaults: {
             name: {value:""},
-            server: {value:"", type:"huawei-config"},
+            server: {type:"huawei-config", required:true},
             mode: { value: "off-on"}
         },
         inputs: 1,
@@ -153,7 +153,7 @@
         color: '#E5766A',
         defaults: {
             name: {value:""},
-            server: {value:"", type:"huawei-config"}
+            server: {type:"huawei-config", required:true}
         },
         inputs: 1,
         outputs: 1,
@@ -195,7 +195,7 @@
         color: '#E5766A',
         defaults: {
             name: {value:""},
-            server: {value:"", type:"huawei-config"}
+            server: {type:"huawei-config", required:true}
         },
         inputs: 1,
         outputs: 1,
@@ -237,7 +237,7 @@
         color: '#E5766A',
         defaults: {
             name: {value:""},
-            server: {value:"", type:"huawei-config"}
+            server: {type:"huawei-config", required:true}
         },
         inputs: 1,
         outputs: 1,
@@ -279,7 +279,7 @@
         color: '#E5766A',
         defaults: {
             name: {value:""},
-            server: {value:"", type:"huawei-config"},
+            server: {type:"huawei-config", required:true},
             phoneNumber: { value: ""},
             message: {value:""}
         },
@@ -304,10 +304,6 @@
     <div class="form-row">
         <label for="node-input-phoneNumber"><i class="fa fa-tag"></i> Phone number</label>
         <input type="text" id="node-input-phoneNumber" placeholder="0123465789">
-    </div>
-    <div class="form-row">
-        <label for="node-input-message"><i class="fa fa-tag"></i> message</label>
-        <input type="text" id="node-input-message" placeholder="Text message">
     </div>
 </script>
 
