Change output content

--- a/huawei-router/huawei-router.html
+++ b/huawei-router/huawei-router.html
@@ -333,8 +333,16 @@
             <span class="property-type">string</span>
         </dt>
         <dd>
-            Full returned from the <a href="https://github.com/Salamek/huawei-lte-api-ts/blob/8d2366314b57b67cc38fcfe1c04640ca70912403/src/api/Sms.ts#L112">API</a>.
-            <i>Unknown which data is relevant for the user</i>
+            Content of the text message that was sent
+        </dd>
+    </dl>
+    <dl class="message-properties">
+        <dt>phoneNumber
+            <span class="property-type">array</span>
+        </dt>
+        <dd>
+            Phone numbers the text massage was sent to returned as an
+            array of strings.
         </dd>
     </dl>
 </script>
