--- a/huawei-router/huawei-router.html
+++ b/huawei-router/huawei-router.html
@@ -308,8 +308,8 @@
 </script>
 
 <script type="text/html" data-help-name="huawei-sms-send">
-    <p>Send sms/text message from router.</p>
-    <p>Parameters can be set inside this node or via input variables. Input variables has higher priority then values defines in this node.</p>
+    <p>Send sms/text message from router. This only works if your router supports SMS do check out the <a href="https://www.npmjs.com/package/huawei-lte-api">tested devices list</a>.</p>
+    <p>Parameters can be set inside the node or via input variables. Input variables has higher priority then values defines in the node.</p>
     <h3>Input</h3>
     <dl class="message-properties">
         <dt>payload
