--- a/huawei-router/huawei-router.html
+++ b/huawei-router/huawei-router.html
@@ -53,9 +53,13 @@
         <label for="node-input-server"><i class="fa fa-globe"></i> Server</label>
         <input type="text" id="node-input-server">
     </div>
+    <div>
+        <b>Please use Huawei info node as this one will be removed in future releases</b>
+    </div>
 </script>
 
 <script type="text/html" data-help-name="huawei-lanhosts">
+    <p><b>Please use Huawei info node as this one will be removed in future releases</b></p>
     <p>Returns array of connected devices.</p>
     <p>Accepts any input to make it run.</p>
     <h3>Output</h3>
@@ -173,9 +177,13 @@
         <label for="node-input-server"><i class="fa fa-globe"></i> Server</label>
         <input type="text" id="node-input-server">
     </div>
+    <div>
+        <b>Please use Huawei info node as this one will be removed in future releases</b>
+    </div>
 </script>
 
 <script type="text/html" data-help-name="huawei-signal">
+    <p><b>Please use Huawei info node as this one will be removed in future releases</b></p>
     <p>Returns signal strength of data/LTE connection.</p>
     <p>Accepts any input to make it run.</p>
     <h3>Output</h3>
@@ -215,9 +223,13 @@
         <label for="node-input-server"><i class="fa fa-globe"></i> Server</label>
         <input type="text" id="node-input-server">
     </div>
+    <div>
+        <b>Please use Huawei info node as this one will be removed in future releases</b>
+    </div>
 </script>
 
 <script type="text/html" data-help-name="huawei-wlanhosts">
+    <p><b>Please use Huawei info node as this one will be removed in future releases</b></p>
     <p>Returns array of connected devices.</p>
     <p>Accepts any input to make it run.</p>
     <h3>Output</h3>
@@ -348,24 +360,24 @@
 </script>
 
 <script type="text/javascript">
-    RED.nodes.registerType("huawei-monitoring", {
+    RED.nodes.registerType("huawei-info", {
         category: 'homesmart',
         color: '#E5766A',
         defaults: {
             name: {value:""},
             server: {type:"huawei-config", required:true},
-            monitorOption: {value:"status"}
+            infoOption: {value:"status"}
         },
         inputs: 1,
         outputs: 1,
         icon: "bridge.svg",
         label: function () {
-            return this.name || "monitor " + this.monitorOption
+            return this.name || "monitor " + this.infoOption
         }
     })
 </script>
 
-<script type="text/html" data-template-name="huawei-monitoring">
+<script type="text/html" data-template-name="huawei-info">
     <div class="form-row">
         <label for="node-input-name"><i class="fa fa-tag"></i> Name</label>
         <input type="text" id="node-input-name" placeholder="Name">
@@ -383,11 +395,14 @@
             <option value="trafficStatistics">trafficStatistics</option>
             <option value="startDate">startDate</option>
             <option value="monthStatistics">monthStatistics</option>
+            <option value="Lan-hostInfo">LAN hostInfo</option>
+            <option value="WLan-hostInfo">Wireless hostList</option>
+            <option value="signal">signal</option>
         </select>
     </div>
 </script>
 
-<script type="text/html" data-help-name="huawei-monitoring">
+<script type="text/html" data-help-name="huawei-info">
     <p>Get monitoring info from router</a>.</p>
     <h3>Input</h3>
     <dl class="message-properties">
