--- a/huawei-router/huawei-router.html
+++ b/huawei-router/huawei-router.html
@@ -387,9 +387,9 @@
         <input type="text" id="node-input-server">
     </div>
     <div class="form-row">
-        <label for="node-input-monitorOption"><i class="fa fa-tag"></i> Monitor option</label>
-        <select value="" id="node-input-monitorOption">
-            <option value="status">status</option>
+        <label for="node-input-infoOption"><i class="fa fa-tag"></i> Monitor option</label>
+        <select value="" id="node-input-infoOption">
+            <option value="Monitor-status">Monitor status</option>
             <option value="convergedStatus">convergedStatus</option>
             <option value="checkNotifications">checkNotifications</option>
             <option value="trafficStatistics">trafficStatistics</option>
