--- a/huawei-router/huawei-router.html
+++ b/huawei-router/huawei-router.html
@@ -53,9 +53,13 @@
         <label for="node-input-server"><i class="fa fa-globe"></i> Server</label>
         <input type="text" id="node-input-server">
     </div>
+    <div>
+        <b>Please use Huawei info node as this one will be removed in future releases</b>
+    </div>
 </script>
 
 <script type="text/html" data-help-name="huawei-lanhosts">
+    <p><b>Please use Huawei info node as this one will be removed in future releases</b></p>
     <p>Returns array of connected devices.</p>
     <p>Accepts any input to make it run.</p>
     <h3>Output</h3>
@@ -173,9 +177,13 @@
         <label for="node-input-server"><i class="fa fa-globe"></i> Server</label>
         <input type="text" id="node-input-server">
     </div>
+    <div>
+        <b>Please use Huawei info node as this one will be removed in future releases</b>
+    </div>
 </script>
 
 <script type="text/html" data-help-name="huawei-signal">
+    <p><b>Please use Huawei info node as this one will be removed in future releases</b></p>
     <p>Returns signal strength of data/LTE connection.</p>
     <p>Accepts any input to make it run.</p>
     <h3>Output</h3>
@@ -215,9 +223,13 @@
         <label for="node-input-server"><i class="fa fa-globe"></i> Server</label>
         <input type="text" id="node-input-server">
     </div>
+    <div>
+        <b>Please use Huawei info node as this one will be removed in future releases</b>
+    </div>
 </script>
 
 <script type="text/html" data-help-name="huawei-wlanhosts">
+    <p><b>Please use Huawei info node as this one will be removed in future releases</b></p>
     <p>Returns array of connected devices.</p>
     <p>Accepts any input to make it run.</p>
     <h3>Output</h3>
@@ -343,6 +355,76 @@
         <dd>
             Phone numbers the text massage was sent to. Returned as an
             array of strings.
+        </dd>
+    </dl>
+</script>
+
+<script type="text/javascript">
+    RED.nodes.registerType("huawei-info", {
+        category: 'homesmart',
+        color: '#E5766A',
+        defaults: {
+            name: {value:""},
+            server: {type:"huawei-config", required:true},
+            infoOption: {value:"Monitor-status"}
+        },
+        inputs: 1,
+        outputs: 1,
+        icon: "bridge.svg",
+        label: function () {
+            return this.name || "huawei " + this.infoOption
+        }
+    })
+</script>
+
+<script type="text/html" data-template-name="huawei-info">
+    <div class="form-row">
+        <label for="node-input-name"><i class="fa fa-tag"></i> Name</label>
+        <input type="text" id="node-input-name" placeholder="Name">
+    </div>
+    <div class="form-row">
+        <label for="node-input-server"><i class="fa fa-globe"></i> Server</label>
+        <input type="text" id="node-input-server">
+    </div>
+    <div class="form-row">
+        <label for="node-input-infoOption"><i class="fa fa-tag"></i> Info option</label>
+        <select value="" id="node-input-infoOption">
+            <option value="Monitor-status">Monitor status</option>
+            <option value="convergedStatus">convergedStatus</option>
+            <option value="checkNotifications">checkNotifications</option>
+            <option value="trafficStatistics">trafficStatistics</option>
+            <option value="startDate">startDate</option>
+            <option value="monthStatistics">monthStatistics</option>
+            <option value="Lan-hostInfo">LAN hostInfo</option>
+            <option value="WLan-hostInfo">Wireless hostList</option>
+            <option value="signal">signal</option>
+        </select>
+    </div>
+    <div class="form-tips">
+        <p>
+           Examples of what to expect can be <a href="https://github.com/zinen/node-red-contrib-huawei-router/tree/main/nodes/info" target="_blank"> found here</a>
+        </p>
+    </div>
+</script>
+
+<script type="text/html" data-help-name="huawei-info">
+    <p>Get info from router</a>.</p>
+    <h3>Input</h3>
+    <dl class="message-properties">
+        <dt>payload
+            <span class="property-type">string</span>
+        </dt>
+        <dd>
+            Start node
+        </dd>
+    </dl>
+    <h3>Output</h3>
+    <dl class="message-properties">
+        <dt>payload
+            <span class="property-type">string</span>
+        </dt>
+        <dd>
+            Result of info choice. Examples of what to expect can be <a href="https://github.com/zinen/node-red-contrib-huawei-router/tree/main/nodes/info"> found here</a>
         </dd>
     </dl>
 </script>
