Changes wording of session timeout

--- a/huawei-router/huawei-router.html
+++ b/huawei-router/huawei-router.html
@@ -27,13 +27,11 @@
         <input type="text" id="node-config-input-url" placeholder="Eg. 192.168.0.45">
     </div>
     <div class="form-row">
-        <label for="node-config-input-sessionTimeout"><i class="fa fa-globe"></i> Session timeout in seconds</label>
-        <input type="number" id="node-config-input-sessionTimeout" placeholder="Default 298 seconds">
+        <label for="node-config-input-sessionTimeout"><i class="fa fa-globe"></i> Optional: Session timeout</label>
+        <input type="number" id="node-config-input-sessionTimeout" placeholder="Defaults to 298 seconds">
     </div>
     <div class="form-tips">
-        <p>
-           Find the exact session timeout of your router by opening the webpage, login and time when the automatic logout happends if you dont tought anything.
-        </p>
+        Find the exact session timeout of your router by opening the webpage, login and time when the automatic logout happends if you dont click anything.
     </div>
 </script>
 
