--- a/huawei-router/huawei-router.html
+++ b/huawei-router/huawei-router.html
@@ -1,13 +1,14 @@
 <script type="text/javascript">
-    RED.nodes.registerType('huawei-config',{
+    RED.nodes.registerType('huawei-config', {
         category: 'config',
         defaults: {
             user: { value: "admin", required: true },
             pass: { value: "", required: true },
-            url: { value: "192.168.1.1", required: true }
+            url: { value: "192.168.1.1", required: true },
+            sessionTimeout: { value: "" }
         },
-        label: function() {
-            return this.user+"@"+this.url;
+        label: function () {
+            return this.user + "@" + this.url;
         }
     });
 </script>
@@ -25,6 +26,13 @@
         <label for="node-config-input-url"><i class="fa fa-globe"></i> URL of router</label>
         <input type="text" id="node-config-input-url" placeholder="Eg. 192.168.0.45">
     </div>
+    <div class="form-row">
+        <label for="node-config-input-sessionTimeout"><i class="fa fa-globe"></i> Optional: Session timeout</label>
+        <input type="number" id="node-config-input-sessionTimeout" placeholder="Defaults to 298 seconds">
+    </div>
+    <div class="form-tips">
+        Find the exact session timeout of your router by opening the webpage, login and time when the automatic logout happends if you dont click anything.
+    </div>
 </script>
 
 <script type="text/javascript">
@@ -32,8 +40,8 @@
         category: 'homesmart',
         color: '#E5766A',
         defaults: {
-            name: {value:""},
-            server: {type:"huawei-config", required:true}
+            name: { value: "" },
+            server: { type: "huawei-config", required: true }
         },
         inputs: 1,
         outputs: 1,
@@ -79,9 +87,9 @@
         category: 'homesmart',
         color: '#E5766A',
         defaults: {
-            name: {value:""},
-            server: {type:"huawei-config", required:true},
-            mode: { value: "off-on"}
+            name: { value: "" },
+            server: { type: "huawei-config", required: true },
+            mode: { value: "off-on" }
         },
         inputs: 1,
         outputs: 1,
@@ -156,8 +164,8 @@
         category: 'homesmart',
         color: '#E5766A',
         defaults: {
-            name: {value:""},
-            server: {type:"huawei-config", required:true}
+            name: { value: "" },
+            server: { type: "huawei-config", required: true }
         },
         inputs: 1,
         outputs: 1,
@@ -202,8 +210,8 @@
         category: 'homesmart',
         color: '#E5766A',
         defaults: {
-            name: {value:""},
-            server: {type:"huawei-config", required:true}
+            name: { value: "" },
+            server: { type: "huawei-config", required: true }
         },
         inputs: 1,
         outputs: 1,
@@ -248,8 +256,8 @@
         category: 'homesmart',
         color: '#E5766A',
         defaults: {
-            name: {value:""},
-            server: {type:"huawei-config", required:true}
+            name: { value: "" },
+            server: { type: "huawei-config", required: true }
         },
         inputs: 1,
         outputs: 1,
@@ -290,10 +298,10 @@
         category: 'homesmart',
         color: '#E5766A',
         defaults: {
-            name: {value:""},
-            server: {type:"huawei-config", required:true},
-            phoneNumber: { value: ""},
-            message: {value:""}
+            name: { value: "" },
+            server: { type: "huawei-config", required: true },
+            phoneNumber: { value: "" },
+            message: { value: "" }
         },
         inputs: 1,
         outputs: 1,
@@ -364,9 +372,9 @@
         category: 'homesmart',
         color: '#E5766A',
         defaults: {
-            name: {value:""},
-            server: {type:"huawei-config", required:true},
-            infoOption: {value:"Monitor-status"}
+            name: { value: "" },
+            server: { type: "huawei-config", required: true },
+            infoOption: { value: "Monitor-status" }
         },
         inputs: 1,
         outputs: 1,
